--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,8 @@
     <url-pattern>/hello</url-pattern>
   </servlet-mapping>
   
-   <servlet-mapping>
+  
+<!--    <servlet-mapping>
 	   <servlet-name>default</servlet-name>
 	   <url-pattern>*.js</url-pattern>
 	   <url-pattern>*.css</url-pattern>
@@ -27,7 +28,7 @@
    <url-pattern>*.jsp</url-pattern>
    <url-pattern>*.jspx</url-pattern>
   </servlet-mapping>
-  
+   -->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
