--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
   <display-name>RlandWeb</display-name>
+  
   <servlet>
+    <servlet-name>dispatcher</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>dispatcher</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
+<!--   <servlet>
     <servlet-name>index</servlet-name>
     <servlet-class>kr.co.rland.web.IndexServlet</servlet-class>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>index</servlet-name>
     <url-pattern>/hello</url-pattern>
   </servlet-mapping>
+   -->
   
-  
-<!--    <servlet-mapping>
+    <servlet-mapping>
 	   <servlet-name>default</servlet-name>
 	   <url-pattern>*.js</url-pattern>
 	   <url-pattern>*.css</url-pattern>
@@ -28,7 +40,7 @@
    <url-pattern>*.jsp</url-pattern>
    <url-pattern>*.jspx</url-pattern>
   </servlet-mapping>
-   -->
+
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
